@@ -10,6 +10,8 @@ Xfce 4.6beta1 (Xfce 4.5.91):
   * Fix occasional "double menu" after menu/icon files change on disk
     (bug 4342).
   * Implement "rubber banding" for the desktop icon view (bug 3245).
+  * Honor the Hidden=, OnlyShowIn=, and NeverShowIn= keys in .desktop
+    files in the desktop folder (bug 4022).
 
 
 Xfce 4.6alpha (Xfce 4.5.90):
